--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,9 +14,15 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            lazy: true
+            stateless: false
             provider: app_user_provider
+            json_login:
+                check_path: app_login
+                username_path: username
+                password_path: password
 
+            logout:
+                path: app_logout
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
