--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.0",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpdocumentor/type-resolver": "^1.8",
         "phpstan/phpdoc-parser": "^1.25",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.0.*",
