--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.0",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
+        "league/oauth2-google": "*",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpdocumentor/type-resolver": "^1.8",
         "phpstan/phpdoc-parser": "^1.25",
