--- a/config/packages/knpu_oauth2_client.yaml
+++ b/config/packages/knpu_oauth2_client.yaml
@@ -5,6 +5,6 @@ knpu_oauth2_client:
             type: google
             client_id: "%env(GOOGLE_CLIENT_ID)%"
             client_secret: "%env(OAUTH_GOOGLE_SECRET)"
-            redirect_route: api_auth_oauth_check
+            redirect_route: api_auth_oauth_callback
             redirect_params:
                 service: google
