✨ Add Google Oauth2 flow

--- a/.env
+++ b/.env
@@ -29,4 +29,4 @@ APP_SECRET=4f6da1465d75b973ae4d82784f28a040
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/freedom?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
-FRONTEND_URL="http://localhost:5173"
+FRONTEND_URL="https://localhost:5173"
