--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "doctrine/orm": "^3.0",
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-google": "*",
+        "nelmio/api-doc-bundle": "^4.23",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpdocumentor/type-resolver": "^1.8",
         "phpstan/phpdoc-parser": "^1.25",
         "runtime/frankenphp-symfony": "^0.2.0",
+        "symfony/asset": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
@@ -29,8 +31,11 @@
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
         "symfony/serializer": "7.0.*",
+        "symfony/twig-bundle": "7.0.*",
         "symfony/validator": "7.0.*",
-        "symfony/yaml": "7.0.*"
+        "symfony/yaml": "7.0.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "config": {
         "allow-plugins": {
