--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ APP_SECRET=4f6da1465d75b973ae4d82784f28a040
 ###< doctrine/doctrine-bundle ###
 
 FRONTEND_URL="https://localhost:5173"
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
