--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-google": "*",
         "nelmio/api-doc-bundle": "^4.23",
+        "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpdocumentor/type-resolver": "^1.8",
         "phpstan/phpdoc-parser": "^1.25",
